--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/status-bar": "3.4.2",
     "@ionic/storage": "^2.0.1",
     "@types/leaflet": "^1.0.60",
+    "geojson": "^0.4.1",
     "ionic-angular": "3.0.1",
     "ionicons": "3.0.0",
     "leaflet": "^1.0.3",
