--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/splash-screen": "3.4.2",
     "@ionic-native/status-bar": "3.4.2",
     "@ionic/storage": "^2.0.1",
+    "@turf/turf": "^4.1.0",
     "@types/geojson": "^1.0.1",
     "@types/leaflet": "^1.0.60",
     "geojson": "^0.4.1",
